사진 대문자 수정

--- a/notice_view/notice_view_10.html
+++ b/notice_view/notice_view_10.html
@@ -102,9 +102,9 @@
             
             At the 31st Samsung HumanTech Paper Award, Ph.D. candidate Gayoung Kim received the Silver Prize in the Material Science & Engineering category. The award was jointly received with Dr. Yejin Ku, who participated in the research.<br><br>
 
-            <img src="../images/notice_view_10_1.jpg" alt="SAMSUNG Humantech Award 1" class="notice-img">
+            <img src="../images/notice_view_10_1.JPG" alt="SAMSUNG Humantech Award 1" class="notice-img">
 
-            <img src="../images/notice_view_10_2.jpg" alt="SAMSUNG Humantech Award 2" class="notice-img">
+            <img src="../images/notice_view_10_2.JPG" alt="SAMSUNG Humantech Award 2" class="notice-img">
 
             김가영 박사과정생이 제31회 삼성휴먼테크논문대상에서 재료공학(Materials Science & Engineering) 부문 은상을 수상하는 쾌거를 이루었습니다.<br><br>
 
