--- a/notice_view/notice_view_3.html
+++ b/notice_view/notice_view_3.html
@@ -103,7 +103,7 @@
 
             ‘인천시민 과학나들이’는 2009년 인천시와 본교 공과대학 공동 주최로 처음 시작되었으며, 올해로 8주년을 맞이하고 있다. 참가인원이 2009년에 940명에서 2015년 3,900여명으로 대폭 증가하는 등 인천지역을 대표하는 과학 강연으로 자리 잡고 있다.<br><br>
 
-            <img src="../images/notice_view_3.jpg" alt="3" class="notice-img">
+            <img src="../images/notice_view_3.JPG" alt="3" class="notice-img">
         </div>
     </div>
 
