--- a/notice_view/notice_view_5.html
+++ b/notice_view/notice_view_5.html
@@ -102,7 +102,7 @@
             
             인하대학교 대학원에서 개최된 우수논문포상을 수상하였다.<br><br>
 
-            <img src="../images/notice_view_5.jpg" alt="Award Photo" class="notice-img">
+            <img src="../images/notice_view_5.JPG" alt="Award Photo" class="notice-img">
         </div>
     </div>
 
