--- a/notice_view/notice_view_7.html
+++ b/notice_view/notice_view_7.html
@@ -104,7 +104,7 @@
             
             우수논문상을 수상하였음.<br><br>
 
-            <img src="../images/notice_view_7.jpg" alt="Award Photo" class="notice-img">
+            <img src="../images/notice_view_7.JPG" alt="Award Photo" class="notice-img">
         </div>
     </div>
 
