사진 주소 정리

--- a/notice_view/notice_view_6.html
+++ b/notice_view/notice_view_6.html
@@ -102,7 +102,7 @@
             
             우수대학원상 ( 부문 : 최다 특허 등록) 을 수상하였다.<br><br>
 
-            <img src="../images/notice_view_6.JPG" alt="Patent Award Photo" class="notice-img">
+            <img src="../images/notice/notice_view_6.JPG" alt="Patent Award Photo" class="notice-img">
         </div>
     </div>
 
