--- a/notice_view/notice_view_2.html
+++ b/notice_view/notice_view_2.html
@@ -102,7 +102,7 @@
 
             (발표 제목 : Highly Fluorinated Methacrylate Polymer for Micro-Contact Printing of Non-Fluorinated Materials)<br><br>
 
-            <img src="../images/notice_view_2.JPG" alt="ACS Poster Award" class="notice-img">
+            <img src="../images/notice/notice_view_2.JPG" alt="ACS Poster Award" class="notice-img">
             
             
         </div>
