--- a/notice_view/notice_view_9.html
+++ b/notice_view/notice_view_9.html
@@ -109,7 +109,7 @@
 
             이진균 교수는 “최근 우수 연구 업적 성과를 거둔 기반에는 인하대의 World Class Smart Lab (WCSL) 사업과 같은 연구 지원이 있어 가능했다”며 “향후에도 성공적으로 과제를 수행해 외국 선진 업체 대비 열세인 국내 포토레지스트 산업의 경쟁력 향상은 물론 포토레지스트 합성과 포토리소그라피를 경험한 우수 신진 인력 배출해 국내 산업 발전에 기여하고 싶다”고 말했다.<br>
 
-            <img src="../images/notice_view_9.JPG" alt="Award Photo" class="notice-img">
+            <img src="../images/notice/notice_view_9.JPG" alt="Award Photo" class="notice-img">
         </div>
     </div>
 
