--- a/people.html
+++ b/people.html
@@ -159,7 +159,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr><td>구예진</td><td>Ph.D</td><td>2026</td><td>IMEC</td><td>yjku0424@gmail.com</td></tr>
+                <tr><td>구예진</td><td>Ph.D</td><td>2025</td><td>IMEC Post-doc</td><td>yjku0424@gmail.com</td></tr>
                 <tr><td>김준식</td><td>MSc</td><td>2026</td><td>Hyosung</td><td>zzundor_326@naver.com</td></tr>
                 <tr><td>권유정</td><td>MSc</td><td>2025</td><td>Applied materials</td><td>kyj123@inha.edu</td></tr>
                 <tr><td>전수빈</td><td>MSc</td><td>2025</td><td>Samsung Electronics</td><td>sb1825@naver.com</td></tr>
