--- a/research_oled.html
+++ b/research_oled.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research - EUV | MSL Inha</title>
+    <title>Research - OLED | MSL Inha</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        /* EUV 페이지와 동일한 스타일 테마 유지 */
         .res-tabs { display: flex; gap: 10px; margin-bottom: 40px; border-bottom: 1px solid #ddd; }
         .res-tab { padding: 10px 20px; text-decoration: none; color: #666; font-size: 1rem; font-weight: bold; border: 1px solid transparent; border-bottom: none; margin-bottom: -1px; transition: 0.2s; }
         .res-tab.active { color: #003a71; border: 1px solid #ddd; border-bottom: 2px solid #fff; background-color: #fff; position: relative; }
         .res-tab:hover:not(.active) { color: #00bcd4; }
 
         .section-title { font-size: 1.6rem; color: #333; font-weight: 800; margin-bottom: 30px; text-align: center; text-transform: uppercase; }
-
         .research-main-img { width: 80%; display: block; margin: 0 auto 50px auto; border: 3px solid #333; box-shadow: 12px 12px 0px #eee; border-radius: 0 !important; }
 
         .info-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-bottom: 50px; width: 100%; }
@@ -23,7 +23,6 @@
         .mini-pub-box h5 { font-size: 1rem; margin-bottom: 20px; color: #003a71; font-weight: bold; }
         .mini-pub-box li { margin-bottom: 15px; color: #555; font-size: 0.95rem; list-style: square; line-height: 1.5; }
 
-        /* 논문 링크 스타일 */
         .pub-link { color: #555; text-decoration: none; transition: 0.2s; }
         .pub-link:hover { color: #00bcd4; text-decoration: underline; }
 
@@ -55,33 +54,31 @@
     <h2 style="border-bottom: 2px solid #003a71; padding-bottom: 10px; color: #003a71; font-weight: 900;">RESEARCH</h2>
 
     <div class="res-tabs">
-        <a href="research.html" class="res-tab active">EUV & E-beam Resist</a>
-        <a href="research_oled.html" class="res-tab">OLED Fluorinated Resist</a>
+        <a href="research.html" class="res-tab">EUV & E-beam Resist</a>
+        <a href="research_oled.html" class="res-tab active">OLED Fluorinated Resist</a>
     </div>
 
-    <h3 class="section-title">01. EUV & E-beam Resist</h3>
+    <h3 class="section-title">02. Highly Fluorinated Resists for OLED Pixel Patterning</h3>
     
-    
-    <img src="images/research_1.jpg" alt="EUV Research" class="research-main-img">
+    <img src="images/research_2.jpg" alt="OLED Research" class="research-main-img">
 
     <div class="info-grid">
         <div class="info-box">
             <h4>Goal</h4>
-            <p>To design and synthesize high-performance photoresists for EUV (13.5 nm) and E-beam lithography. We strive to push the limits of resolution and sensitivity for sub-10nm semiconductor fabrication through molecular engineering of resist materials.</p>
+            <p>To develop novel imaging protocols based on radical and fluorine chemistry. Our research aims to enable the fabrication of high-resolution OLED pixel banks without damaging sensitive organic active layers.</p>
         </div>
         <div class="info-box">
             <h4>Research Activities</h4>
-            <p>We modulate metal-oxide nanoclusters through structural modifications and composite formulations to achieve efficient positive-tone behavior. Our research also focuses on negative-tone patterning by utilizing the unique characteristics of C-F bonds in fluorinated materials. Furthermore, we implement various strategies to enhance EUV absorption cross-sections and minimize stochastic noise for next-generation lithography.</p>
+            <p>Synthesis of fluorinated resist materials and optimisation of the photolithography processes using fluorous solvents. This orthogonal processing ensures the integrity of organic semiconductors during device production.</p>
         </div>
     </div>
 
     <div class="mini-pub-box">
-        <h5>Selected Publications</h5>
+        <h5>Selected Publications & Patents</h5>
         <ul>
-            <li><a href="https://advanced.onlinelibrary.wiley.com/doi/10.1002/adfm.202503002" target="_blank" class="pub-link">"Tin-Oxo Nanocluster Composite Films as Positive-Tone Photoresist for Extreme UV Lithography", 2025.</a></li>
-            <li><a href="https://advanced.onlinelibrary.wiley.com/doi/full/10.1002/adfm.202525300" target="_blank" class="pub-link">"Tin-Oxo Nanocluster Extreme UV Photoresists Equipped with Chemical Features for Atmospheric Stability and High EUV Sensitivity", 2025.</a></li>
-            <li><a href="https://pubs.acs.org/doi/full/10.1021/acsami.5c22668" target="_blank" class="pub-link">"Positive Role of Iodine Atoms in Chemically Amplified Photoresists for Extreme Ultraviolet Lithography", 2025.</a></li>
-            <li><a href="https://pubs.acs.org/doi/full/10.1021/acs.orglett.5c04299" target="_blank" class="pub-link">"Synergistic Fluoroalkyl and Electron-Rich Vinyl Units for Ionizing Radiation-Induced Cross-linking", 2026.</a></li>
+            <li><a href="https://pubs.rsc.org/en/content/articlelanding/2017/tc/c6tc04111f" target="_blank" class="pub-link">"Highly soluble fluorous alkyl ether-tagged imaging materials for the photo-patterning of organic light-emitting devices"</a></li>
+            <li><a href="https://pubs.acs.org/doi/10.1021/acsapm.3c00131" target="_blank" class="pub-link">"Photoinduced Solubility Modulation in the Copolymers of Fluoroalkyl, Spiropyranyl, and Isobornyl Methacrylates"</a></li>
+            <li><a href="https://pubs.acs.org/doi/full/10.1021/acsmaterialslett.5c00683" target="_blank" class="pub-link">"Vacuum-Depositable Fluorinated Photoresist toward Organic Light-Emitting Diode (OLED) Patterning"</a></li>
         </ul>
     </div>
 </div>
