--- a/research.html
+++ b/research.html
@@ -71,7 +71,7 @@
         </div>
         <div class="info-box">
             <h4>Research Activities</h4>
-            <p>We modulate metal-oxide nanoclusters through structural modifications and composite formulations to achieve efficient positive-tone behavior. Our research also focuses on negative-tone patterning by utilizing the unique characteristics of C-F bonds in fluorinated materials. Furthermore, we implement various strategies to enhance EUV absorption cross-sections and minimize stochastic noise for next-generation lithography.</p>
+            <p>- We modulate metal-oxide nanoclusters through structural modifications and composite formulations to achieve efficient positive-tone behavior. <br> - Our research also focuses on negative-tone patterning by utilizing the unique characteristics of C-F bonds in fluorinated materials. <br> - Furthermore, we implement various strategies to enhance EUV absorption cross-sections and minimize stochastic noise for next-generation lithography.</p>
         </div>
     </div>
 
