--- a/research_oled.html
+++ b/research_oled.html
@@ -69,7 +69,7 @@
         </div>
         <div class="info-box">
             <h4>Research Activities</h4>
-            <p>Synthesis of fluorinated resist materials and optimisation of the photolithography processes using fluorous solvents. This orthogonal processing ensures the integrity of organic semiconductors during device production.</p>
+            <p>- Synthesis of fluorinated resist materials and optimisation of the photolithography processes using fluorous solvents. <br> - This orthogonal processing ensures the integrity of organic semiconductors during device production.</p>
         </div>
     </div>
 
