--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Materials Synthesis Laboratory | Inha Univ.</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        /* 메인 페이지 전용 박스 디자인 스타일 */
+        /* 기본 배경 및 폰트 설정 */
         body { background-color: #f4f6f8; margin: 0; padding: 0; }
 
         /* --- 1. 레이아웃 통합 및 여백 확대 --- */
@@ -17,7 +17,7 @@
             box-sizing: border-box;
         }
 
-        /* --- 2. Boxed Hero Banner (300px 높이 유지) --- */
+        /* --- 2. Boxed Hero Banner --- */
         .hero-container { margin-top: 40px; margin-bottom: 60px; }
         .hero-banner {
             width: 100%;
@@ -80,6 +80,9 @@
             padding: 25px; 
             box-shadow: 0 4px 15px rgba(0,0,0,0.04); 
             transition: transform 0.2s ease;
+            min-height: 250px; /* 박스 최소 높이를 고정하여 안정감 부여 */
+            display: flex;
+            flex-direction: column;
         }
         .content-box-header { 
             display: flex; 
@@ -98,19 +101,36 @@
         .notice-list li a:hover { color: #00bcd4; font-weight: bold; }
         .notice-date { color: #999; font-size: 0.85rem; flex-shrink: 0; }
 
-        /* --- 갤러리 중앙 정렬 수정한 부분 --- */
+        /* --- 갤러리 크기 및 위치 수정 부분 --- */
+        #gallery-sync-box {
+            flex: 1; /* 남은 공간을 채움 */
+            display: flex;
+            align-items: center; /* 세로 중앙 정렬 */
+        }
         .gallery-link { 
             display: flex; 
-            gap: 20px; 
+            gap: 25px; 
             text-decoration: none; 
             color: inherit; 
-            align-items: center;    /* 세로 가운데 정렬 */
-            justify-content: center; /* 가로 가운데 정렬 */
+            align-items: center; 
+            width: 100%;
         }
-        .gallery-link img { width: 180px; height: 125px; object-fit: cover; border-radius: 8px; border: 1px solid #eee; }
-        .gallery-preview-text { flex: 1; }
-        .gallery-preview-text h4 { margin: 0 0 10px 0; color: #003a71; font-size: 1.15rem; font-weight: bold; }
-        .gallery-preview-text p { font-size: 0.92rem; color: #666; line-height: 1.6; margin: 0; }
+        .gallery-link img { 
+            width: 240px;  /* 사진 크기 확대 (180px -> 240px) */
+            height: 160px; /* 사진 높이 확대 (125px -> 160px) */
+            object-fit: cover; 
+            border-radius: 8px; 
+            border: 1px solid #eee; 
+            flex-shrink: 0; /* 이미지 크기 고정 */
+        }
+        .gallery-preview-text { 
+            flex: 1; 
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* 텍스트 내부 요소 세로 중앙 정렬 */
+        }
+        .gallery-preview-text h4 { margin: 0 0 12px 0; color: #003a71; font-size: 1.2rem; font-weight: bold; line-height: 1.4; }
+        .gallery-preview-text p { font-size: 0.95rem; color: #666; line-height: 1.6; margin: 0; }
 
         /* --- 5. Link Cards --- */
         .link-cards { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 20px; margin-bottom: 80px; }
@@ -136,6 +156,8 @@
             .hero-banner { height: 250px; }
             .hero-banner h1 { font-size: 1.8rem; }
             .main-content-grid, .link-cards, .pub-highlight-box { grid-template-columns: 1fr; flex-direction: column; }
+            .gallery-link { flex-direction: column; text-align: center; }
+            .gallery-link img { width: 100%; height: auto; }
         }
     </style>
 </head>
